added functionality on add button

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <p class="description" id="title-desc">Things that are purple:</p>
         <input type="text" class="description desc-inpt">
         <button class="description change-btn">Change list description</button>
-        <ul>
+        <ul class="list-container">
           <li style="background-color: lightskyblue;">grapes<button class="up">Up</button><button class="down">Down</button><button class="remove">Remove</button></li>
           <li>amethyst<button class="up">Up</button><button class="down">Down</button><button class="remove">Remove</button></li>
           <li>lavender<button class="up">Up</button><button class="down">Down</button><button class="remove">Remove</button></li>
